--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="{% static 'css/style.css' %}">
    </head>
    <body>
-      <nav class="navbar navbar-expand-lg navbar-dark gradient-bg">
+      <nav class="navbar sticky-top navbar-expand-lg navbar-dark gradient-bg">
          <div class="container">
             <a class="navbar-brand" href="{% url 'service_list' %}">
                <div class="logo"><i class="fas fa-calendar-check fa-lg"></i></div>
